--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ side_bar_repo_limit: 5
 author: increment
 organization: 3D increment
 organization_url: https://3dincrement.github.io
-github_username: mzlogin
+github_username: 3dincrement
 location: Qingdao, China
 email: 3dincremnt@gmail.com
 
