--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,26 +2,30 @@
   name: mzlogin
   url: https://github.com/mzlogin
 
-- sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
+- sitename: GitHub
+  name: 3dincrement
+  url: https://github.com/3dincrement
 
-- sitename: LinkedIn
-  name: mazhuang
-  url: https://www.linkedin.com/in/mazhuang
+- #sitename: 掘金#
+  #name: mzlogin
+  #url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
 
-- sitename: 博客
-  name: 码志
-  url: http://mazhuang.org
+- #sitename: LinkedIn#
+  #name: mazhuang#
+  #url: https://www.linkedin.com/in/mazhuang#
+
+- #sitename: 博客#
+  #name: 码志#
+  #url: http://mazhuang.org#
 
 - sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/mzlogin
+  #name: mzlogin#
+  #url: http://weibo.com/mzlogin#
 
-- sitename: 知乎
-  name: mzlogin
-  url: http://www.zhihu.com/people/mzlogin
+- #sitename: 知乎#
+  #name: mzlogin#
+  #url: http://www.zhihu.com/people/mzlogin#
 
-- sitename: 豆瓣
-  name: 壮哥不胖
-  url: http://www.douban.com/people/freedim
+- #sitename: 豆瓣#
+  #name: 壮哥不胖#
+  #url: http://www.douban.com/people/freedim#
