--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 baseurl:
 url: https://3dincrement.github.io
 date_format: "ordinal"
-title: 3D increment
+title: 3D Increment
 subtitle: "3D 打印改变生活"
 description: "3D increment blog"
-keywords: 3D printing, increment, recuite
+keywords: 3D printing, increment, recruit
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
@@ -36,7 +36,7 @@ navs:
 
   -
     href: /wiki/
-    label: 维基
+    label: 项目
 
   -
     href: /links/
