--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: increment
-organization: 3D increment
+organization: 3D Increment
 organization_url: https://3dincrement.github.io
 github_username: 3dincrement
 location: Qingdao, China
