--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: increment
+author: 3D Increment
 organization: 3D Increment
 organization_url: https://3dincrement.github.io
 github_username: 3dincrement
