--- a/_config.yml
+++ b/_config.yml
@@ -90,18 +90,18 @@ comments_provider: gitalk
 disqus:
     username: 
 # https://imsun.net/posts/gitment-introduction/
-gitment:
-    owner: 3dincrement
-    repo: 3dincrement.github.io
-    oauth:
-        client_id: 6aac903760c8b3b313e8
-        client_secret: 0696db07ba2897d037fcac78c3575d317ce990c6
+#gitment:
+#    owner: 3dincrement
+#    repo: 3dincrement.github.io
+#   oauth:
+#        client_id: 6aac903760c8b3b313e8
+#        client_secret: 0696db07ba2897d037fcac78c3575d317ce990c6
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner:  3dincrement
     repo: 3dincrement.github.io
-    clientID: 6aac903760c8b3b313e8
-    clientSecret: 0696db07ba2897d037fcac78c3575d317ce990c6
+    clientID: 6378910390d28bca398e
+    clientSecret: d35e0bd679e85ec6961c89bf96d5704939dd894e
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
