--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: 3D Increment
 subtitle: "3D 打印改变生活"
 description: "3D increment blog"
 keywords: 3D printing, increment, recruit
-timezone: Asia/Shanghai
+#timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
 
@@ -43,6 +43,10 @@ navs:
     label: 链接
 
   -
+    href: /member/
+    label: 成员
+    
+  -
     href: /about/
     label: 关于
 
@@ -76,6 +80,10 @@ collections:
     wiki:
         output: true
         permalink: /wiki/:path/
+               
+    member:
+        output: true
+        permalink: /member/:path/
 
 repository: 3dincrement/3dincrement.github.io
 
